--- a/.github/workflows/setup-repository.yml
+++ b/.github/workflows/setup-repository.yml
@@ -27,7 +27,7 @@ jobs:
 
       - uses: actions/checkout@v2
         with:
-          # Comminting workflow files using the regular GITHUB_TOKEN will fail with 
+          # Comminting workflow files using the regular GITHUB_TOKEN will fail with
           # `Git Error: Refusing to allow a GitHub App to create or update workflow without workflows permission`.
           # This is by design to prevent third-parties from adding malicious workflow files.
           #
@@ -37,7 +37,7 @@ jobs:
 
       - uses: actions/setup-python@v2
         with:
-          python-version: '3.x'
+          python-version: "3.x"
 
       - name: Install dependencies
         run: pip install cookiecutter
@@ -52,6 +52,10 @@ jobs:
         # --output-dir    Where to output the generated project dir into
         run: cookiecutter . --no-input repository=${{ github.repository }} repository_name=${{ github.event.repository.name }} temp_directory=cookiecutter-temp
 
+      - name: Generate metadata
+        run: |
+          python extract_metadata.py
+
       - name: Prepare root directory
         shell: bash
         # Remove all files and folder exepct .git/ and cookiecutter-temp/
@@ -59,6 +63,7 @@ jobs:
           find ./ -maxdepth 1 \
           ! -name '.git' \
           ! -name 'cookiecutter-temp' \
+          ! -name 'metadata.json' \
           ! -name '.' \
           ! -exec rm -rf {} +
 
