Update workflow comment to include metadata.json

--- a/.github/workflows/setup-repository.yml
+++ b/.github/workflows/setup-repository.yml
@@ -58,7 +58,7 @@ jobs:
 
       - name: Prepare root directory
         shell: bash
-        # Remove all files and folder exepct .git/ and cookiecutter-temp/
+        # Remove all files and folder except .git/, cookiecutter-temp/, and metadata.json
         run: |
           find ./ -maxdepth 1 \
           ! -name '.git' \
