--- a/{{cookiecutter.temp_directory}}/.github/workflows/update_rocrates_on_push.yml
+++ b/{{cookiecutter.temp_directory}}/.github/workflows/update_rocrates_on_push.yml
@@ -1,6 +1,8 @@
 name: Update ro-crates 
 on:
   push:
+    branches: 
+      - master
     paths:
       - '**.ipynb'
 jobs:
@@ -8,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Setup
-      - uses: actions/checkout@v2
+        uses: actions/checkout@v2
         with:
           persist-credentials: false # otherwise, the token used is the GITHUB_TOKEN, instead of your personal access token.
           fetch-depth: 0 
@@ -28,11 +30,9 @@ jobs:
         run: |
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git config --global user.name "github-actions[bot]"
-          git commit -m 'Auto update crates' -a
+          git add .
+          git commit -m 'Auto update crates'
+
 
       - name: Push changes
         uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: ${{ github.ref }}
-
