Get ROCrate from commit for get_by_type

--- a/{{cookiecutter.temp_directory}}/dev-requirements.in
+++ b/{{cookiecutter.temp_directory}}/dev-requirements.in
@@ -6,7 +6,7 @@ isort
 flake8
 nbqa
 pre-commit
-rocrate
+rocrate @ git+https://github.com/ResearchObject/ro-crate-py.git@dc3f75b0d0390dedbf9a830b6325b76dba468f1f
 giturlparse
 requests
 python-dotenv
