--- a/.github/workflows/setup-repository.yml
+++ b/.github/workflows/setup-repository.yml
@@ -35,9 +35,9 @@ jobs:
           # Checkout my blog post https://stefanbuck.com/blog for alternative options
           token: ${{ env.REPO_SETUP_TOKEN || secrets.GITHUB_TOKEN }}
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v3
         with:
-          python-version: "3.x"
+          python-version: "3.10"
 
       - name: Install dependencies
         run: pip install cookiecutter rocrate
