update crate maker script and remove postBuild

--- a/{{cookiecutter.temp_directory}}/dev-requirements.in
+++ b/{{cookiecutter.temp_directory}}/dev-requirements.in
@@ -6,9 +6,14 @@ isort
 flake8
 nbqa
 pre-commit
-rdflib > 6.0.1 # To avoid problems with rdflib-json
+rdflib
 rocrate
 giturlparse
 requests
 python-dotenv
 jupyterlab-code-formatter
+PyGithub
+GitPython
+beautifulsoup4
+lxml
+arrow
